--- a/app/src/main/res/drawable/pincode_btn.xml
+++ b/app/src/main/res/drawable/pincode_btn.xml
@@ -3,18 +3,11 @@
     <corners
         android:radius="4.44dp"
         />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
     <size
         android:width="71.5dp"
         android:height="57.3dp"
         />
     <stroke
         android:width="0.88dp"
-        android:color="#000000"
-        />
+        android:color="#000000" />
 </shape>
