--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TravelFirmsApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TravelFirmsApplication" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorControlActivated">@color/black</item>
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
