--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TravelFirmsApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TravelFirmsApplication" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorControlActivated">@color/black</item>
     </style>
     <style name="Theme.TravelFirmsApplication" parent="Base.Theme.TravelFirmsApplication" />
 </resources>
