--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -135,6 +135,7 @@
         android:textAllCaps="false"
         android:textSize="15.5sp"
         android:id="@+id/reg_btn"
+        android:onClick="Reg"
         android:background="@drawable/buttonreg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
