--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,5 +4,13 @@
         <item name="colorControlActivated">@color/black</item>
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+    </style>
+    <style name="Theme.TravelFirmsApplication" parent="Base.Theme.TravelFirmsApplication" />
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_img</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.TravelFirmsApplication</item>
     </style>
 </resources>
