--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,14 +55,14 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textEditField2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:hint="Электронная почта"
-        app:hintTextColor="#94949B"
         android:textColorHint="#94949B"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:hintTextColor="#94949B"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:startIconContentDescription="@+id/imageView2">
 
@@ -73,8 +73,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
-            android:inputType="textEmailAddress"
             android:fontFamily="@font/montserrat_bold"
+            android:inputType="textEmailAddress"
             android:textSize="15.5sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textEditField"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Пароль"
