--- a/app/src/main/res/layout/activity_pin_code.xml
+++ b/app/src/main/res/layout/activity_pin_code.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".PinCode">
 
     <ImageView
@@ -43,7 +43,7 @@
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="8.8dp"
-        android:text="Создайте пин-код"
+        android:text="Умный дом"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="@color/white"
         android:textSize="21.3sp"
@@ -55,6 +55,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="@+id/bgd_linear"
         app:layout_constraintStart_toStartOf="@+id/bgd_linear"
@@ -88,6 +89,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15.5sp"
+        android:onClick="CheckPinCode"
         android:layout_marginTop="41.7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,84 +142,79 @@
         </LinearLayout>
 
         <LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn4"
-        android:layout_width="71.5dp"
-        android:layout_height="57.3dp"
-        android:text="4"
-        android:layout_margin="11dp"
-        android:fontFamily="@font/montserrat_light"
-        android:textSize="28sp"
-        android:background="@drawable/pincode_btn" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn4"
+                android:layout_width="71.5dp"
+                android:layout_height="57.3dp"
+                android:text="4"
+                android:layout_margin="11dp"
+                android:fontFamily="@font/montserrat_light"
+                android:textSize="28sp"
+                android:background="@drawable/pincode_btn" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn5"
-        android:layout_width="71.5dp"
-        android:layout_height="57.3dp"
-        android:text="5"
-        android:layout_margin="11dp"
-        android:fontFamily="@font/montserrat_light"
-        android:textSize="28sp"
-        android:background="@drawable/pincode_btn" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn5"
+                android:layout_width="71.5dp"
+                android:layout_height="57.3dp"
+                android:text="5"
+                android:layout_margin="11dp"
+                android:fontFamily="@font/montserrat_light"
+                android:textSize="28sp"
+                android:background="@drawable/pincode_btn" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn6"
-        android:layout_width="71.5dp"
-        android:layout_height="57.3dp"
-        android:text="6"
-        android:layout_margin="11dp"
-        android:fontFamily="@font/montserrat_light"
-        android:textSize="28sp"
-        android:background="@drawable/pincode_btn" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn6"
+                android:layout_width="71.5dp"
+                android:layout_height="57.3dp"
+                android:text="6"
+                android:layout_margin="11dp"
+                android:fontFamily="@font/montserrat_light"
+                android:textSize="28sp"
+                android:background="@drawable/pincode_btn" />
 
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn7"
-            android:layout_width="71.5dp"
-            android:layout_height="57.3dp"
-            android:text="7"
-            android:layout_margin="11dp"
-            android:fontFamily="@font/montserrat_light"
-            android:textSize="28sp"
-            android:background="@drawable/pincode_btn" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn7"
+                android:layout_width="71.5dp"
+                android:layout_height="57.3dp"
+                android:text="7"
+                android:layout_margin="11dp"
+                android:fontFamily="@font/montserrat_light"
+                android:textSize="28sp"
+                android:background="@drawable/pincode_btn" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn8"
-            android:layout_width="71.5dp"
-            android:layout_height="57.3dp"
-            android:text="8"
-            android:layout_margin="11dp"
-            android:fontFamily="@font/montserrat_light"
-            android:textSize="28sp"
-            android:background="@drawable/pincode_btn" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn8"
+                android:layout_width="71.5dp"
+                android:layout_height="57.3dp"
+                android:text="8"
+                android:layout_margin="11dp"
+                android:fontFamily="@font/montserrat_light"
+                android:textSize="28sp"
+                android:background="@drawable/pincode_btn" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn9"
-            android:layout_width="71.5dp"
-            android:layout_height="57.3dp"
-            android:text="9"
-            android:layout_margin="11dp"
-            android:fontFamily="@font/montserrat_light"
-            android:textSize="28sp"
-            android:background="@drawable/pincode_btn" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn9"
+                android:layout_width="71.5dp"
+                android:layout_height="57.3dp"
+                android:text="9"
+                android:layout_margin="11dp"
+                android:fontFamily="@font/montserrat_light"
+                android:textSize="28sp"
+                android:background="@drawable/pincode_btn" />
 
-    </LinearLayout>
-
-
-
+        </LinearLayout>
 
     </LinearLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
