--- a/app/src/main/res/drawable/btn_exit.xml
+++ b/app/src/main/res/drawable/btn_exit.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
         <corners
-            android:radius="8dp" />
+            android:radius="8.8dp" />
         <solid
-            android:color="#984E4F" />
+            android:color="#FA1624" />
         <size
-            android:width="244dp"
-            android:height="44dp" />
+            android:width="185.7dp"
+            android:height="52.8dp" />
     </shape>
