--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:onClick="AddRoom"
         android:layout_marginBottom="32dp"
         android:backgroundTint="@color/blue"
         android:src="@drawable/btn_plus"
